--- a/index.css
+++ b/index.css
@@ -6,21 +6,28 @@ body {
   display: grid;
   height: 100vh;
   margin: 0;
+  grid-template-columns: 10vw auto 15vw;
 }
 
 #renderCanvas {
-  height: 80%;
-  width: 80%;
+  height: 100%;
+  width: 100%;
   display: none;
+  grid-column: 2/3;
+  border-width: 5px;
+  border-style: ridge;
+  border-color: #eea9cd;
+  box-sizing: border-box;
 }
 
 .navbar {
   display: flex;
   flex-direction: column;
-  width: 10%;
+  width: 100%;
   height: 100%;
   background-color: #4d5a58;
   align-items: center;
+  grid-column: 1/2;
 }
 
 .navbar > button {
