--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0px;
 }
@@ -7,6 +11,7 @@ body {
   height: 100vh;
   margin: 0;
   grid-template-columns: 10vw auto 15vw;
+  grid-template-rows: 50vh 50vh;
 }
 
 #renderCanvas {
@@ -14,10 +19,10 @@ body {
   width: 100%;
   display: none;
   grid-column: 2/3;
+  grid-row: 1/3;
   border-width: 5px;
   border-style: ridge;
-  border-color: #eea9cd;
-  box-sizing: border-box;
+  border-color: #2a0623;
 }
 
 .navbar {
@@ -25,9 +30,13 @@ body {
   flex-direction: column;
   width: 100%;
   height: 100%;
-  background-color: #4d5a58;
+  background-color: #adb6b5;
   align-items: center;
   grid-column: 1/2;
+  grid-row: 1/3;
+  border-width: 5px;
+  border-style: outset;
+  border-color: #dfdee7;
 }
 
 .navbar > button {
@@ -35,8 +44,8 @@ body {
   margin-top: 10%;
   font-weight: 600;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
-  background-color: #22568f;
-  color: white;
+  background-color: lightskyblue;
+  color: black;
   height: 50px;
   border-width: 5px;
   border-style: inset;
@@ -44,10 +53,9 @@ body {
 }
 
 .navbar > button:hover {
-  background-color: lightskyblue;
-  color: black;
+  background-color: #22568f;
+  color: white;
   font-weight: 800;
-  font-size: 1em;
 }
 
 .navbar > img {
@@ -55,14 +63,37 @@ body {
   border-width: 10px;
   border-style: ridge;
   border-color: rgb(221, 218, 214);
-  box-sizing: border-box;
-}
-
-.navbar-game {
-  /* display: none; */
-  margin-top: 20%;
 }
 
 .navbar > #home {
   margin-top: 2px;
+}
+
+.game-settings {
+  /* display: none; */
+  margin-top: 20%;
+}
+
+.middle-content {
+  background-color: lime;
+  grid-row: 1/3;
+  text-align: center;
+}
+
+.game-history {
+  background-color: red;
+  grid-column: 3/4;
+  grid-row: 1/2;
+  border-width: 5px;
+  border-style: outset;
+  border-color: #dfdee7;
+}
+
+.ui-settings {
+  background-color: hotpink;
+  grid-row: 2/3;
+  grid-column: 3/4;
+  border-width: 5px;
+  border-style: outset;
+  border-color: #dfdee7;
 }
