--- a/index.css
+++ b/index.css
@@ -1,11 +1,13 @@
 * {
-  box-sizing: border-box;
+  margin: 0;
 }
 
-body {
-  margin: 0px;
+#renderCanvas {
+  height: 100vh;
+  width: 100vw;
 }
 
+/*
 .container {
   display: grid;
   height: 100vh;
@@ -14,16 +16,6 @@ body {
   grid-template-rows: 50vh 50vh;
 }
 
-#renderCanvas {
-  height: 100%;
-  width: 100%;
-  display: none;
-  grid-column: 2/3;
-  grid-row: 1/3;
-  border-width: 5px;
-  border-style: ridge;
-  border-color: #2a0623;
-}
 
 .navbar {
   display: flex;
@@ -70,7 +62,7 @@ body {
 }
 
 .game-settings {
-  /* display: none; */
+  display: none;
   margin-top: 20%;
 }
 
@@ -113,3 +105,5 @@ body {
   border-style: outset;
   border-color: #dfdee7;
 }
+
+*/
