--- a/index.css
+++ b/index.css
@@ -47,18 +47,53 @@
 
 #startOG {
   position: absolute;
-  top: 70vh;
+  top: 64vh;
   z-index: 1;
-  width: 200px;
+  width: 250px;
   height: 50px;
   background-color: transparent;
   color: white;
   font-size: larger;
   font-weight: bolder;
   border: 2mm ridge rgba(255, 250, 250, 0.938);
+  text-shadow: -1px -1px 0 rgb(0, 0, 0), 1px 1px 0 rgb(0, 0, 0);
+}
+
+#createOnlineMatch {
+  position: absolute;
+  top: 76vh;
+  z-index: 1;
+  width: 250px;
+  background-color: transparent;
+  color: rgba(28, 128, 194, 0.938);
+  font-size: larger;
+  font-weight: bolder;
+  border: 2mm ridge rgba(28, 128, 194, 0.938);
+  text-shadow: -1px -1px 0 rgb(0, 0, 0), 1px 1px 0 rgb(0, 0, 0);
+}
+
+#joinOnlineMatch {
+  position: absolute;
+  top: 85vh;
+  z-index: 1;
+  width: 250px;
+  background-color: transparent;
+  color: rgba(187, 66, 66, 0.938);
+  font-size: larger;
+  font-weight: bolder;
+  border: 2mm ridge rgba(187, 66, 66, 0.938);
+  text-shadow: -1px -1px 0 rgb(0, 0, 0), 1px 1px 0 rgb(0, 0, 0);
 }
 
 #startOG:hover {
+  transform: scale(1.2);
+}
+
+#createOnlineMatch:hover {
+  transform: scale(1.2);
+}
+
+#joinOnlineMatch:hover {
   transform: scale(1.2);
 }
 
