--- a/index.css
+++ b/index.css
@@ -149,6 +149,73 @@
   border: 1mm ridge rgba(146, 143, 143, 0.938);
 }
 
+/* Game Options Modal */
+#gameOptionsScreen {
+  height: 100vh;
+  width: 100vw;
+  z-index: 3;
+  position: absolute;
+  background-image: url("/assets/options-background.png");
+  background-position: center;
+  background-size: cover;
+  text-align: center;
+  font-family: fantasy;
+}
+
+#gameOptionsTitle {
+  margin: 10%;
+  font-size: larger;
+  background-color: red;
+}
+
+#gameOptionsTeamsText {
+  background-color: rgba(255, 0, 0, 0.5);
+  margin-left: 15%;
+  margin-right: 15%;
+}
+
+#gameOptionsTeamsBlack {
+  margin-left: 5%;
+}
+
+#gameOptionsConfirmation {
+  margin-top: 10%;
+  margin-bottom: 10%;
+}
+
+#gameOptionsTimerText {
+  background-color: rgba(255, 0, 0, 0.5);
+  margin-left: 15%;
+  margin-right: 15%;
+  margin-top: 5%;
+}
+
+#gameOptionsTimer > input {
+  margin-left: 5%;
+  margin-top: 5%;
+}
+
+#gameOptionsInviteCode {
+  margin-top: 10%;
+  background-color: rgba(255, 0, 0, 0.5);
+}
+
+#gameOptionsInviteCode > p {
+  margin-top: 10%;
+  background-color: rgba(251, 255, 0, 0.835);
+  margin-left: 20%;
+  margin-right: 20%;
+}
+
+#exitButton {
+  position: fixed;
+  right: 1%;
+  top: 1%;
+  width: 20px;
+  height: 20px;
+  background-color: red;
+}
+
 @media screen and (max-width: 320px) {
   #gameOverlay > button {
     margin-right: 1%;
