--- a/src/index.ejs
+++ b/src/index.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3D Chess</title>
 </head>
-<body>
+<body> 
   <!-- <div id="loading">
     <p>Loading</p>
   </div> -->
@@ -17,11 +17,11 @@
       <button id="undo">Undo</button>
       <div id="timer">
       <div id="player1">
-        <!-- <img id="avatar1" src="assets/white-player.png"><div id="timer1">-</div> -->
+        <img id="avatar1"><div id="timer1">-</div>
       </div>
       <button id="pause">Pause</button>
       <div id="player2">
-        <!-- <img id="avatar2" src="assets/black-player.png"><div id="timer2">-</div> -->
+        <img id="avatar2"><div id="timer2">-</div>
       </div>
     </div>
     </div>
