feature: updated with higher quality meshes

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -6,9 +6,9 @@
     <title>3D Chess</title>
 </head>
 <body> 
-  <!-- <div id="loading">
+  <div id="loading">
     <p>Loading</p>
-  </div> -->
+  </div>
   <div class="app">
     <div id="gameOverlay">
       <button id="home">Home</button>
