--- a/src/index.css
+++ b/src/index.css
@@ -122,7 +122,7 @@
 }
 
 #timer {
-  display: inline-block;
+  display: flex;
   background-color: rgba(83, 125, 160, 0.561);
   position: absolute;
   right: 1%;
@@ -163,7 +163,6 @@
 }
 
 #gameOptionsTitle {
-  margin: 10%;
   font-size: larger;
   background-color: red;
 }
@@ -179,29 +178,23 @@
 }
 
 #gameOptionsConfirmation {
-  margin-top: 10%;
-  margin-bottom: 10%;
 }
 
 #gameOptionsTimerText {
   background-color: rgba(255, 0, 0, 0.5);
   margin-left: 15%;
   margin-right: 15%;
-  margin-top: 5%;
 }
 
 #gameOptionsTimer > input {
   margin-left: 5%;
-  margin-top: 5%;
 }
 
 #gameOptionsInviteCode {
-  margin-top: 10%;
   background-color: rgba(255, 0, 0, 0.5);
 }
 
 #gameOptionsInviteCode > p {
-  margin-top: 10%;
   background-color: rgba(251, 255, 0, 0.835);
   margin-left: 20%;
   margin-right: 20%;
