--- a/src/index.ejs
+++ b/src/index.ejs
@@ -6,30 +6,7 @@
     <title>3D Chess</title>
 </head>
 <body> 
-  <div id="loading">
-    <p>Loading</p>
-  </div>
-  <div class="app">
-    <div id="gameOverlay">
-      <button id="home">Home</button>
-      <button id="resetBoard">Reset</button>
-      <button id="camera">Camera</button>
-      <button id="undo">Undo</button>
-      <div id="timer">
-      <div id="player1">
-        <img id="avatar1"><div id="timer1">-</div>
-      </div>
-      <button id="pause">Pause</button>
-      <div id="player2">
-        <img id="avatar2"><div id="timer2">-</div>
-      </div>
-    </div>
-    </div>
-    <canvas id='renderCanvas' touch-action="none"></canvas>
-    <button id="startOG">Start Offline Game</button>
-    <button id="createOnlineMatch">Create Online Match</button>
-    <button id="joinOnlineMatch">Join Online Match</button>
-  </div>
+  <div id="root"></div>
 </body>
 </body>
 </html>
