--- a/src/index.css
+++ b/src/index.css
@@ -2,102 +2,43 @@
   margin: 0;
 }
 
-#loading {
-  height: 100vh;
-  width: 100vw;
-  background-color: rgb(0, 0, 0);
-  z-index: 2;
-  position: relative;
-}
-
-#loading > p {
-  color: white;
-  text-align: center;
-  line-height: 100vh;
-  font-size: xx-large;
-  font-family: fantasy;
-  animation: loadingAnimation;
-  animation-duration: 0.75s;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
-}
-
-@keyframes loadingAnimation {
-  from {
-    opacity: 0.6;
-  }
-  to {
-    opacity: 0.2;
-  }
-}
-
 .app {
   height: 100vh;
   width: 100vw;
   position: fixed;
-  display: flex;
-  justify-content: center;
   z-index: 1;
 }
 
-#renderCanvas {
+canvas {
   height: 100%;
   width: 100%;
 }
 
-#startOG {
+.hide {
+  display: none;
+}
+
+#playButton {
   position: absolute;
-  top: 64vh;
   z-index: 1;
-  width: 250px;
+  top: 64vh;
+  left: 50vw;
+  width: 200px;
   height: 50px;
   background-color: transparent;
   color: white;
   font-size: larger;
   font-weight: bolder;
-  border: 2mm ridge rgba(255, 250, 250, 0.938);
-  text-shadow: -1px -1px 0 rgb(0, 0, 0), 1px 1px 0 rgb(0, 0, 0);
+  border: 1mm ridge whitesmoke;
+  transform: translateX(-50%);
 }
 
-#createOnlineMatch {
-  position: absolute;
-  top: 76vh;
-  z-index: 1;
-  width: 250px;
-  background-color: transparent;
-  color: rgba(28, 128, 194, 0.938);
-  font-size: larger;
-  font-weight: bolder;
-  border: 2mm ridge rgba(28, 128, 194, 0.938);
-  text-shadow: -1px -1px 0 rgb(0, 0, 0), 1px 1px 0 rgb(0, 0, 0);
+#playButton:hover {
+  color: blue;
+  background-color: whitesmoke;
 }
 
-#joinOnlineMatch {
-  position: absolute;
-  top: 85vh;
-  z-index: 1;
-  width: 250px;
-  background-color: transparent;
-  color: rgba(187, 66, 66, 0.938);
-  font-size: larger;
-  font-weight: bolder;
-  border: 2mm ridge rgba(187, 66, 66, 0.938);
-  text-shadow: -1px -1px 0 rgb(0, 0, 0), 1px 1px 0 rgb(0, 0, 0);
-}
-
-#startOG:hover {
-  transform: scale(1.2);
-}
-
-#createOnlineMatch:hover {
-  transform: scale(1.2);
-}
-
-#joinOnlineMatch:hover {
-  transform: scale(1.2);
-}
-
-#gameOverlay {
+/* #gameOverlay {
   display: none;
   width: 100%;
   position: absolute;
@@ -150,7 +91,7 @@
 }
 
 /* Game Options Modal */
-#gameOptionsScreen {
+/* #gameOptionsScreen {
   height: 100vh;
   width: 100vw;
   z-index: 3;
@@ -236,4 +177,4 @@
     margin-right: 2%;
     margin-top: 0.2%;
   }
-}
+} */
