--- a/src/index.ejs
+++ b/src/index.ejs
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3D Chess</title>
+    <style>
+      body{background-color: black;}
+    </style>
 </head>
 <body> 
   <div id="root"></div>
