--- a/src/index.css
+++ b/src/index.css
@@ -44,36 +44,69 @@ canvas {
 }
 
 /* Game Options Modal */
+.match-settings-modal {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column wrap;
+}
+
 #gameOptionsScreen {
-  position: absolute;
-  display: inline;
-  height: 100px;
-  width: 100px;
-  z-index: 3;
+  height: 80%;
+  width: 80%;
+  z-index: 2;
   background-image: url("/assets/options-background.png");
   background-position: center;
   background-size: cover;
   text-align: center;
-  font-family: fantasy;
+  border: 0.5rem ridge whitesmoke;
+  color: black;
+  overflow-y: auto;
 }
 
 #gameOptionsTitle {
-  font-size: larger;
-  background-color: red;
+  font-size: 2.5rem;
+  background-color: burlywood;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+  font-weight: bold;
 }
 
-#gameOptionsTeamsText {
-  background-color: rgba(255, 0, 0, 0.5);
+#gameOptionsScreen > div > p {
+  background-color: burlywood;
+  margin: 1rem;
+  font-size: 1.25rem;
+  border: 2px inset black;
 }
 
-#gameOptionsTimerText {
-  background-color: rgba(255, 0, 0, 0.5);
+#gameOptionsScreen > a {
+  color: white;
+  font-size: 2.25rem;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 0 1rem;
+  border-radius: 2rem;
 }
 
-#gameOptionsInviteCode {
-  background-color: rgba(255, 0, 0, 0.5);
+#gameOptionsScreen > div > label {
+  margin: 0.2rem;
 }
 
-#gameOptionsInviteCode > p {
-  background-color: rgba(251, 255, 0, 0.835);
+#gameOptionsConfirmation {
+  margin: 1rem;
+}
+#gameOptionsTeams {
+  background-color: rgba(255, 255, 255, 0.7);
+}
+
+#gameOptionsTimer {
+  background-color: rgba(255, 255, 255, 0.7);
+}
+
+@media only screen and (min-width: 768px) {
+  #gameOptionsScreen {
+    height: 80%;
+    width: 50%;
+  }
 }
