--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,12 @@
 * {
   margin: 0;
+  box-sizing: border-box;
 }
 
 .app {
   position: absolute;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   pointer-events: none;
 }
 
