--- a/src/index.ejs
+++ b/src/index.ejs
@@ -7,6 +7,7 @@
     <style>
       body{background-color: black;}
     </style>
+    <link rel="shortcut icon" href="#">
 </head>
 <body> 
   <div id="root"></div>
