--- a/src/component/side-nav.css
+++ b/src/component/side-nav.css
@@ -8,7 +8,7 @@
   overflow-x: hidden;
 }
 
-.sidenav a {
+.sidenav button {
   display: block;
   padding: 8px 8px 8px 32px;
   text-decoration: none;
@@ -16,7 +16,7 @@
   color: #818181;
 }
 
-.sidenav a:hover {
+.sidenav button:hover {
   color: #f1f1f1;
 }
 
@@ -25,6 +25,7 @@
   top: 0;
   font-size: 2.25rem;
   margin-left: 65%;
+  color: white;
 }
 
 div.category {
