--- a/src/component/match-settings-modal/match-settings-modal.css
+++ b/src/component/match-settings-modal/match-settings-modal.css
@@ -78,28 +78,11 @@
 }
 
 #inviteCode {
-  height: 80%;
-  width: 80%;
-  z-index: 2;
-  background-image: url("/assets/options-background.png");
-  background-position: center;
-  background-size: cover;
-  text-align: center;
-  border: 0.5rem ridge whitesmoke;
-  color: black;
-  overflow-y: auto;
-}
-
-#inviteCode > div {
-  background-color: rgba(255, 255, 255, 0.7);
-}
-
-#inviteCode > p {
-  background-color: burlywood;
+  font-weight: bolder;
   margin: 1rem;
-  font-size: 1.25rem;
-  border: 2px inset black;
+  border: 0.2rem solid black;
 }
+
 @media only screen and (min-width: 768px) {
   .gameOptionsScreen {
     height: 80%;
