--- a/src/component/modals/message-modal.css
+++ b/src/component/modals/message-modal.css
@@ -5,6 +5,7 @@
   justify-content: center;
   align-items: center;
   flex-flow: column wrap;
+  position: absolute;
 }
 
 .message-wrapper .message {
@@ -41,6 +42,11 @@
   padding: 0.1rem 1rem;
   border-radius: 2rem;
   margin: 1rem;
+}
+
+.message button:hover {
+  scale: 0.9;
+  background-color: royalblue;
 }
 
 .message .confirm {
