--- a/src/component/match-settings/match-settings.css
+++ b/src/component/match-settings/match-settings.css
@@ -22,12 +22,11 @@
 
 .gameOptionsScreen > .title {
   font-size: 2.5rem;
-  background-color: rgba(30, 143, 255, 0.884);
+  background-color: rgba(30, 143, 255, 0.8);
   margin-bottom: 1rem;
   margin-top: 1rem;
+  padding: 0.25rem;
   font-weight: bold;
-  border-bottom: 0.25rem solid rgba(121, 110, 110, 0.8);
-  border-top: 0.25rem solid rgba(121, 110, 110, 0.8);
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
 }
@@ -45,11 +44,19 @@
 }
 
 .gameOptionsScreen > .closeBtn {
+  display: inline-block;
   color: white;
   font-size: 2.25rem;
   background-color: rgba(0, 0, 0, 0.5);
   padding: 0 1rem;
-  border-radius: 2rem;
+  border-radius: 1rem;
+  border: 0.15rem solid black;
+  margin-top: 0.5rem;
+}
+
+.gameOptionsScreen > .closeBtn:hover {
+  color: red;
+  background-color: rgba(245, 245, 245, 0.8);
 }
 
 .option {
@@ -65,16 +72,19 @@
 
 .confirmButton {
   margin: 1rem;
-  background-color: rgba(255, 255, 255, 0.7);
-  color: black;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: whitesmoke;
   font-size: larger;
   font-weight: bolder;
   border: 1mm ridge whitesmoke;
   border-radius: 5rem;
+  border: 0.15rem solid black;
+  padding: 1rem 1rem;
 }
 
 .confirmButton:hover {
   color: red;
+  background-color: rgba(245, 245, 245, 0.8);
 }
 
 #inviteCode {
