--- a/src/component/modals/message-modal.css
+++ b/src/component/modals/message-modal.css
@@ -1,52 +1,49 @@
 .message-wrapper {
   height: 100%;
   width: 100%;
+  position: absolute;
   display: flex;
+  flex-flow: column wrap;
   justify-content: center;
   align-items: center;
-  flex-flow: column wrap;
-  position: absolute;
+  z-index: 3;
 }
 
 .message-wrapper .message {
   display: flex;
-  flex-flow: column;
-  justify-content: space-around;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
   align-items: center;
-  height: 80%;
-  width: 80%;
-  z-index: 3;
-  background-image: url("/assets/options-background.png");
-  background-position: center;
-  background-size: cover;
+  background-color: rgba(30, 143, 255, 0.7);
   text-align: center;
-  border: 0.5rem ridge whitesmoke;
+  border: 0.25rem inset whitesmoke;
   color: black;
-  overflow-y: auto;
 }
 
 .message .question {
-  background-color: rgba(30, 143, 255, 0.7);
+  width: 100%;
+  background-color: rgba(245, 245, 245, 0.685);
   margin: 1rem;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
-  font-size: 1.5rem;
+  font-size: 1.75rem;
   padding: 0.2rem;
-  border-radius: 1rem;
+  border-radius: 0.5rem;
   font-weight: bold;
 }
 
 .message button {
-  color: white;
+  color: black;
   font-size: 2.25rem;
   padding: 0.1rem 1rem;
-  border-radius: 2rem;
+  border-radius: 1rem;
   margin: 1rem;
+  border: 0.25rem solid black;
 }
 
 .message button:hover {
-  scale: 0.9;
-  background-color: royalblue;
+  transform: scale(0.9);
+  background-color: rgb(238, 224, 153);
 }
 
 .message .confirm {
