--- a/src/component/match-settings/match-settings.css
+++ b/src/component/match-settings/match-settings.css
@@ -93,6 +93,20 @@
   border: 0.2rem solid black;
 }
 
+.gameOptionsScreen .slider {
+  -webkit-appearance: none; /* Override default look */
+  appearance: none;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 1rem;
+  border: 0.2rem solid blue;
+  margin: 1rem;
+}
+
+.time-display {
+  font-size: 1.5rem;
+  font-weight: bolder;
+}
+
 @media only screen and (min-width: 768px) {
   .gameOptionsScreen {
     height: 80%;
