fix: firefox flex overlay css

--- a/src/component/game-overlay/game-overlay.css
+++ b/src/component/game-overlay/game-overlay.css
@@ -25,8 +25,11 @@
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   border: 0.1rem white solid;
-  padding: 0.4rem;
+  padding: 0.1rem;
+  font-size: 0.9rem;
   pointer-events: auto;
+  min-width: 0;
+  flex-grow: 1;
 }
 
 .gameOverlay > .item > img {
@@ -38,7 +41,8 @@
 }
 
 .gameOverlay > .item:hover {
-  transform: scale(0.9);
+  transform: scale(0.95);
+  background-color: rgba(240, 230, 95, 0.5);
 }
 
 .timer {
@@ -47,6 +51,8 @@
   background-color: rgba(255, 255, 255, 0.5);
   justify-content: space-between;
   text-align: center;
+  position: relative;
+  bottom: 0.1rem;
 }
 
 .timer > .playerTimer > img {
