--- a/src/component/match-settings/match-settings.css
+++ b/src/component/match-settings/match-settings.css
@@ -83,8 +83,8 @@
 }
 
 .confirmButton:hover {
-  color: red;
-  background-color: rgba(245, 245, 245, 0.8);
+  color: black;
+  background-color: rgba(240, 230, 95, 0.5);
 }
 
 #inviteCode {
