--- a/src/index.css
+++ b/src/index.css
@@ -1,49 +1,89 @@
 * {
   margin: 0;
   box-sizing: border-box;
-  background-color: var(--primary-background);
 }
 
+html {
+  background-color: var(--primary-background);
+}
 :root {
   --primary-background: #333333;
   --primary-color: #e9e9e9;
   --primary-alt-color: #8b8b8b;
   --primary-font: sans-serif;
 }
-
 #root {
-  height: 100vh;
+  background-color: var(--primary-background);
+  height: 100%;
   color: var(--primary-color);
   font-family: var(--primary-font);
 }
-
 #app {
   height: 100%;
-  max-width: 95ch;
+  max-width: 100ch;
   margin: auto;
 }
-
 .divider {
   border-bottom: 1px solid #e9e9e9;
   width: 90%;
   margin: auto;
 }
-
+.mini-divider {
+  border-bottom: 1px solid #e9e9e9;
+  width: 45%;
+  margin: auto;
+}
 .menu-button {
   position: relative;
   width: 50px;
   margin-top: 1em;
   object-fit: contain;
 }
-
 .screen {
   text-align: center;
+  width: 90%;
+  margin: auto;
+}
+canvas {
+  height: 100vh;
+  width: 100%;
+}
+.page-title {
+  font-size: 3em;
+  padding: 0.5em;
+}
+
+.label {
+  color: peachpuff;
+}
+
+button {
+  width: 80%;
+  max-width: 300px;
+  padding: 1em 0;
+  margin: 2em 0 0.2em 0;
+  background-color: #999999;
+  font-weight: bold;
+  border: 2px solid whitesmoke;
+  border-radius: 6px;
+  font-size: 1em;
+}
+
+button:hover {
+  background-color: #c2c2c2;
+  transform: scale(0.95);
+}
+
+a {
+  text-decoration: none;
+  background-color: transparent;
+  color: black;
 }
 
 /* Loading Screen-------------------  */
 #loading {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   background-color: rgb(0, 0, 0);
   z-index: 2;
   position: relative;
@@ -70,10 +110,6 @@
   }
 }
 /* Home Screen-------------------  */
-.home .page-title {
-  font-size: 3em;
-  padding: 0.5em;
-}
 
 .home .picture {
   background-color: black;
@@ -105,7 +141,7 @@
 }
 
 /* Navbar-------------------  */
-.sidenav {
+.navbar {
   height: 100%;
   width: 250px;
   position: fixed;
@@ -115,7 +151,7 @@
   overflow-x: hidden;
 }
 
-.sidenav button {
+.navbar button {
   padding: 8px 8px 8px 32px;
   font-size: 1.5rem;
   background-color: transparent;
@@ -123,7 +159,7 @@
   display: block;
 }
 
-.sidenav .closebtn {
+.navbar .closebtn {
   display: block;
   background-color: transparent;
   top: 0;
@@ -133,7 +169,7 @@
   color: white;
 }
 
-.sidenav .category {
+.navbar .category {
   display: block;
   color: rgba(245, 245, 245, 0.842);
   pointer-events: none;
@@ -145,24 +181,28 @@ button.highlight {
   color: whitesmoke;
 }
 
-.sidenav a {
+.navbar a {
   text-decoration: none;
   background-color: transparent;
   color: #818181;
 }
 
-.sidenav a:hover {
-  color: #f1f1f1;
+.navbar a:hover {
+  color: whitesmoke;
 }
 
 /* Game Overlay-------------------  */
 .overlayWrapper {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  max-width: 100ch;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  height: 100%;
   align-content: space-between;
   pointer-events: none;
+  background-color: transparent;
 }
 
 .gameOverlay {
@@ -196,6 +236,7 @@ button.highlight {
   object-fit: contain;
   margin: auto;
   pointer-events: none;
+  background-color: transparent;
 }
 
 .gameOverlay > .item:hover {
@@ -218,9 +259,11 @@ button.highlight {
   object-fit: contain;
   display: inline;
   padding: 0 0.2rem;
+  background-color: transparent;
 }
 
 .timer > .playerTimer > div {
+  background-color: transparent;
   display: inline;
   padding: 0.1rem;
   font-weight: bold;
@@ -354,3 +397,12 @@ button.highlight {
 }
 
 /* -------------------  */
+
+.room .settings {
+  margin: 1em;
+  font-size: 1.3em;
+}
+
+.room .settings > p {
+  margin: 1em;
+}
