--- a/src/index.css
+++ b/src/index.css
@@ -241,7 +241,7 @@ button.highlight {
 
 .gameOverlay > .item:hover {
   transform: scale(0.95);
-  background-color: rgba(240, 230, 95, 0.5);
+  background-color: gainsboro;
 }
 
 .timer {
@@ -398,11 +398,11 @@ button.highlight {
 
 /* -------------------  */
 
-.room .settings {
+.lobby .settings {
   margin: 1em;
   font-size: 1.3em;
 }
 
-.room .settings > p {
+.lobby .settings > p {
   margin: 1em;
 }
