--- a/src/index.css
+++ b/src/index.css
@@ -39,21 +39,27 @@ html {
   width: 50px;
   object-fit: contain;
   padding-bottom: 1em;
-  margin-left: 1.5em;
+  margin-left: 1em;
   bottom: 0;
 }
 .screen {
   text-align: center;
 }
 
-#gameCanvas {
+.gameCanvas {
   height: 100vh;
   width: 100%;
 }
 
-#displayCanvas {
+.displayCanvas {
   width: 100%;
   height: 450px;
+  touch-action: none;
+  pointer-events: none;
+}
+
+.notDisplayed {
+  display: none;
 }
 
 .page-title {
@@ -93,24 +99,38 @@ a {
 }
 
 /* Loading Screen-------------------  */
-#loading {
+.loading {
+  display: flex;
   height: 100%;
   width: 100%;
   background-color: rgb(0, 0, 0);
   z-index: 2;
   position: relative;
+  justify-content: center;
+  align-items: center;
 }
 
-#loading > p {
+.loading > p {
   color: white;
-  text-align: center;
-  line-height: 100vh;
-  font-size: xx-large;
+  font-size: 2em;
+  letter-spacing: 0.5em;
   font-family: fantasy;
   animation: loadingAnimation;
   animation-duration: 0.75s;
   animation-iteration-count: infinite;
   animation-direction: alternate;
+}
+
+.loadingContainer {
+  height: 100vh;
+  width: 100vw;
+  max-height: 100%;
+  max-width: 100%;
+}
+
+.loadingDisplay {
+  width: 100%;
+  height: 450px;
 }
 
 @keyframes loadingAnimation {
