--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,7 @@ html {
 }
 
 .gameCanvas {
+  display: block;
   height: 100vh;
   width: 100%;
 }
@@ -221,31 +222,21 @@ button.highlight {
 }
 
 /* Game Overlay-------------------  */
-.overlayWrapper {
+.menu-overlay {
+  z-index: 2;
   position: absolute;
-  height: 100%;
+  top: 0;
   width: 100%;
   max-width: 100ch;
   display: flex;
-  flex-flow: row wrap;
   justify-content: center;
-  align-content: space-between;
-  pointer-events: none;
-  background-color: transparent;
-}
-
-.gameOverlay {
-  display: flex;
-  justify-content: center;
-  z-index: 2;
-  width: 100%;
   height: 3.5rem;
   background-color: transparent;
   text-align: center;
   pointer-events: none;
 }
 
-.gameOverlay > .item {
+.menu-overlay > .item {
   color: black;
   background-color: rgba(245, 245, 245, 0.5);
   font-weight: bold;
@@ -259,7 +250,7 @@ button.highlight {
   flex-grow: 1;
 }
 
-.gameOverlay > .item > img {
+.menu-overlay > .item > img {
   display: block;
   height: 60%;
   object-fit: contain;
@@ -268,19 +259,20 @@ button.highlight {
   background-color: transparent;
 }
 
-.gameOverlay > .item:hover {
+.menu-overlay > .item:hover {
   transform: scale(0.95);
   background-color: gainsboro;
 }
 
 .timer {
+  position: absolute;
   display: flex;
-  height: 2rem;
+  width: 100%;
+  max-width: 100ch;
   background-color: rgba(255, 255, 255, 0.5);
-  justify-content: space-between;
+  justify-content: space-around;
   text-align: center;
-  position: relative;
-  bottom: 0.1rem;
+  bottom: 0;
 }
 
 .timer > .playerTimer > img {
@@ -293,6 +285,7 @@ button.highlight {
 
 .timer > .playerTimer > div {
   background-color: transparent;
+  color: black;
   display: inline;
   padding: 0.1rem;
   font-weight: bold;
