--- a/src/index.ejs
+++ b/src/index.ejs
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="keywords" content="3D Chess, Free Chess, Online Chess, Play Chess, Chess">
+  <meta name="description" content="Play 3D chess with your friends online for free">
+  <meta name="author" content="Eliya Vahl">
     <title>3D Chess</title>
     <style>
       body{background-color: black;}
