--- a/src/index.css
+++ b/src/index.css
@@ -32,10 +32,8 @@ html {
 .menu-button {
   position: fixed;
   display: block;
-  width: 50px;
-  object-fit: contain;
-  padding-top: 1em;
   margin-left: 1em;
+  margin-top: 1em;
   top: 0;
 }
 .screen {
