--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 * {
+  padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
@@ -19,90 +20,34 @@ body {
   color: var(--primary-color);
   font-family: var(--primary-font);
 }
+
 #app {
   height: 100%;
 }
 
-.mini-divider {
-  border-bottom: 1px solid #e9e9e9;
-  width: 45%;
-  margin: 1em auto auto auto;
-}
-.menu-button {
-  position: fixed;
-  display: block;
-  margin-left: 1em;
-  margin-top: 1em;
-  top: 0;
-}
 .screen {
-  text-align: center;
+  width: 100%;
+  height: 100%;
+  /* text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  margin: auto;
-  width: 100%;
+  margin: auto; */
 }
 
 .gameCanvas {
   display: block;
-  height: 100vh;
-  width: 100%;
 }
 
 .displayCanvas {
   position: absolute;
   top: 0;
   z-index: -1;
-  width: 100%;
-  height: 100%;
   touch-action: none;
   pointer-events: none;
 }
 
-.notDisplayed {
-  display: none;
-}
-
-.page-title {
-  font-size: 3em;
-  margin-bottom: 0.3em;
-  text-shadow: 4px 4px red;
-}
-
-.label {
-  color: peachpuff;
-}
-
-.btn:hover {
-  background-color: #c2c2c252;
-  transform: scale(0.95);
-}
-
-.match-button {
-  margin-top: 3em;
-}
-
-.highlight-site-title {
-  color: aqua;
-  display: inline-block;
-}
-
-a {
-  text-decoration: none;
-  background-color: transparent;
-  color: black;
-}
-
-.btn.highlight-choice {
-  color: rgba(73, 255, 73, 0.678);
-}
-
-.unselected-choice.btn {
-  color: white;
-}
-
-/* Loading Screen-------------------  */
+/* Loading */
 .loading {
   display: flex;
   height: 100%;
@@ -125,32 +70,6 @@ a {
   animation-direction: alternate;
 }
 
-.loadingContainer {
-  height: 100vh;
-  width: 100vw;
-  max-height: 100%;
-  max-width: 100%;
-}
-
-.loadingDisplay {
-  width: 100%;
-  height: 450px;
-}
-
-.input-wrapper {
-  margin: 0.5em auto;
-  text-align: center;
-}
-.lobby-input {
-  display: block;
-  border-radius: 6px;
-  font-size: 1.5em;
-  padding: 0.2em;
-  max-width: 100%;
-  text-align: center;
-  margin: 0.5em auto;
-}
-
 @keyframes loadingAnimation {
   from {
     opacity: 0.6;
@@ -165,96 +84,6 @@ a {
   position: fixed;
   height: 100%;
   background-color: transparent;
-}
-
-.home > * {
-  background-color: transparent;
-}
-
-.btn {
-  display: block;
-  margin: 0 auto;
-  font-size: 1.75em;
-  border-radius: 6px;
-  background-color: rgba(0, 0, 0, 0.6);
-  color: aqua;
-  width: 80%;
-  max-width: 300px;
-  padding: 1em 0;
-  border: 2px solid currentColor;
-}
-
-.btn + .btn {
-  margin-top: 0.5em;
-}
-
-.home .home .picture {
-  background-color: black;
-  height: 200px;
-  width: 80%;
-  margin: 1em auto;
-}
-
-.home .page-info {
-  margin: 1em 0;
-  font-size: 1.2em;
-  font-weight: bold;
-  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
-    1px 1px 0 #000;
-  color: white;
-  stroke: rgb(0, 0, 0);
-}
-
-/* Navbar-------------------  */
-.navbar {
-  height: 100%;
-  width: 250px;
-  position: fixed;
-  z-index: 3;
-  left: 0;
-  top: 0;
-  background-color: #111;
-  overflow-x: hidden;
-}
-
-.navbar button {
-  padding: 8px 8px 8px 32px;
-  font-size: 1.5rem;
-  background-color: transparent;
-  border: none;
-  display: block;
-}
-
-.navbar .closebtn {
-  display: block;
-  background-color: transparent;
-  top: 0;
-  font-size: 2.25rem;
-  margin-left: 75%;
-  margin-top: 10px;
-  color: white;
-}
-
-.navbar .category {
-  display: block;
-  color: rgba(245, 245, 245, 0.842);
-  pointer-events: none;
-  margin: 0.75em 0 auto 0;
-  font-family: monospace;
-}
-
-button.highlight {
-  color: whitesmoke;
-}
-
-.navbar a {
-  text-decoration: none;
-  background-color: transparent;
-  color: #818181;
-}
-
-.navbar a:hover {
-  color: whitesmoke;
 }
 
 /* Game Overlay-------------------  */
@@ -370,205 +199,6 @@ button.highlight {
   font-size: 1.5em;
   padding: 0.3em 0.1em;
   padding-bottom: 2em;
-}
-
-.red {
-  background-color: red;
-  background-image: url(../assets/promotion-choices/rook-choice.png);
-  background-position: center;
-  background-size: contain;
-  background-repeat: no-repeat;
-}
-
-.blue {
-  background-color: blue;
-  background-image: url(../assets/promotion-choices/bishop-choice.png);
-  background-position: center;
-  background-size: contain;
-  background-repeat: no-repeat;
-}
-.green {
-  background-color: green;
-  background-image: url(../assets/promotion-choices/knight-choice.png);
-  background-position: center;
-  background-size: contain;
-  background-repeat: no-repeat;
-}
-.yellow {
-  background-color: yellow;
-  background-image: url(../assets/promotion-choices/queen-choice.png);
-  background-position: center;
-  background-size: contain;
-  background-repeat: no-repeat;
-}
-
-/* Profile-------------------  */
-.profile-wrapper {
-  position: absolute;
-  z-index: 2;
-  width: 100%;
-  height: 100%;
-}
-
-.profile {
-  background-color: rgb(53, 53, 53);
-  position: relative;
-  top: 10%;
-  max-width: 80%;
-  margin: auto;
-  padding: 2.5% 5%;
-  color: whitesmoke;
-}
-
-.profile > .header {
-  display: flex;
-  align-items: center;
-  padding: 1em 0;
-  border: 7.5px inset silver;
-}
-
-.profile .header img {
-  object-fit: contain;
-  width: 80px;
-  margin: 1em;
-}
-
-.profile .header p {
-  font-size: 1.6em;
-  font-weight: 400;
-  font-family: Georgia, "Times New Roman", Times, serif;
-}
-
-.profile .past-matches {
-  display: flex;
-  flex-flow: row nowrap;
-  border: 1px ridge silver;
-  padding: 0.5em;
-  overflow-x: scroll;
-  text-align: center;
-  overflow: scroll;
-}
-
-/* Hide scrollbar for Chrome, Safari and Opera */
-.past-matches::-webkit-scrollbar {
-  display: none;
-}
-
-/* Hide scrollbar for IE, Edge and Firefox */
-.past-matches {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
-}
-
-.profile .past-match {
-  min-width: 100px;
-}
-
-.profile .past-match > * {
-  padding: 0.4em 0;
-}
-
-.profile .label {
-  padding: 1em;
-}
-
-@media (max-width: 350px) {
-  .profile > .header {
-    border: 5px inset silver;
-  }
-
-  .profile .header img {
-    width: 60px;
-  }
-}
-
-/* Lobby Settings -------------------  */
-
-.lobby .settings {
-  margin: 1em;
-  font-size: 1.3em;
-}
-
-.lobby .settings > p {
-  margin: 1em;
-}
-
-/* Message Request -------------------  */
-.message-wrapper {
-  height: 100%;
-  width: 100%;
-  max-width: 100ch;
-  position: absolute;
-  top: 0;
-  display: flex;
-  flex-flow: column wrap;
-  justify-content: center;
-  align-items: center;
-  padding: 1.5em;
-  margin: auto;
-  z-index: 3;
-}
-
-.message-wrapper .message {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-evenly;
-  align-items: center;
-  background: linear-gradient(rgba(30, 143, 255, 0.7), rgba(0, 0, 0, 1));
-  text-align: center;
-  border: 0.25rem inset whitesmoke;
-  color: black;
-}
-
-.message .text {
-  width: 100%;
-  background-color: rgba(245, 245, 245, 0.685);
-  margin: 1rem;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
-  font-size: 1.5rem;
-  padding: 0.2rem;
-  border-radius: 0.5rem;
-  font-weight: bold;
-}
-
-.message button {
-  color: black;
-  font-size: 1.75rem;
-  padding: 0.1rem 1rem;
-  border-radius: 1rem;
-  margin: 1rem;
-  border: 0.25rem solid black;
-}
-
-.message button:hover {
-  transform: scale(0.9);
-  background-color: rgb(238, 224, 153);
-}
-
-.message .confirm {
-  background-color: rgba(0, 255, 0, 0.7);
-}
-
-.message .reject {
-  background-color: rgba(255, 0, 0, 0.7);
-}
-
-/*  Promotion Modal -------------------  */
-.promotion-wrapper {
-  height: 100%;
-  width: 100%;
-  max-width: 100ch;
-  top: 0;
-  position: absolute;
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-  z-index: 3;
-}
-
-.promotion-wrapper .selection {
-  width: 50%;
 }
 
 .red {
