--- a/src/index.css
+++ b/src/index.css
@@ -28,30 +28,18 @@ body {
 .screen {
   width: 100%;
   height: 100%;
-  /* text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  margin: auto; */
 }
 
-.gameCanvas {
+.canvasDisplay {
   display: block;
-}
-
-.displayCanvas {
   position: absolute;
   top: 0;
-  z-index: -1;
   touch-action: none;
-  pointer-events: none;
 }
 
 /* Loading */
 .loading {
   display: flex;
-  height: 100%;
-  width: 100%;
   background-color: rgb(0, 0, 0);
   z-index: 2;
   position: relative;
