--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
+@font-face {
+  font-family: Ubuntu;
+  src: url("../assets/fonts/ubuntu/Ubuntu-Regular.ttf");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: Ubuntu;
+  src: url("../assets/fonts/ubuntu/Ubuntu-Italic.ttf");
+  font-weight: normal;
+  font-style: italic;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -28,13 +42,17 @@ body {
 .screen {
   width: 100%;
   height: 100%;
+  background: transparent;
+  position: absolute;
 }
 
-.canvasDisplay {
+canvas {
+  position: fixed;
+  z-index: -1;
   display: block;
-  position: absolute;
-  top: 0;
-  touch-action: none;
+  outline: none;
+  height: 100%;
+  width: 100%;
 }
 
 /* Loading */
@@ -69,8 +87,51 @@ body {
 /* Home Screen-------------------  */
 
 .home {
-  position: fixed;
   background-color: transparent;
+  font-family: Ubuntu;
+}
+
+.home-title {
+  display: block;
+  font-family: inherit;
+  font-size: 4em;
+  padding: 1em;
+  text-shadow: 2px 2px black;
+  color: grey;
+  text-align: center;
+  font-style: italic;
+}
+
+.menu {
+  position: inherit;
+  bottom: 0;
+  margin: 50px 20px;
+}
+
+.menu-item {
+  margin: 20px 10px;
+}
+
+.menu-item button {
+  width: 200px;
+  max-width: 75vw;
+  height: 40px;
+  border-radius: 6px;
+  background: rgba(1, 1, 1, 0.5);
+  border: 2px solid white;
+  box-shadow: 0px 0px 10px 1px white;
+  color: white;
+  font-family: inherit;
+  font-style: italic;
+  font-size: 25px;
+  text-align: left;
+  padding-left: 10px;
+  transition: width 0.25s;
+}
+
+.menu-item button:hover {
+  color: rgb(140, 140, 140);
+  width: 300px;
 }
 
 /* Game Overlay-------------------  */
